--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ h1, p{
 }
 
 *{
-  font-family: -apple-system,".SFNSText-Regular","San Francisco","Roboto","Segoe UI","Helvetica Neue","Lucida Grande",Arial,sans-serif;
+  font-family: ".SFNSText-Regular","San Francisco","Roboto","Segoe UI","Helvetica Neue","Lucida Grande",Arial,sans-serif;
   color: #161616;
   line-height: 1.2;
 }
