--- a/programs.css
+++ b/programs.css
@@ -1,3 +1,14 @@
+.spoiler 
+{
+    background-color: black;
+    color: black;
+}
+
+.spoiler:hover
+{
+    background-color: #E9E9DF;
+}
+
 h1{
     font-size: 64px;
     font-weight: 300;
@@ -8,7 +19,21 @@ p:first-of-type{
     top: -50px;
 }
 
+p:nth-of-type(3), ul{
+    line-height: 0;
+    position: relative;
+    top: 10px;
+}
+
+p:nth-of-type(2){
+    line-height: 1.4;
+    position: relative;
+    top: -10px;
+}
+
 ul{
+    position: relative;
+    left: -15px;
     display: table;
     margin: 0 auto;
 }
